force-app/main/default/objects/Event_Registration__c/Event_Registration__c.object-meta.xml
<CustomObject>
    <description>customer object</description>
    <label>Event registration</label>
    <nameField>
        <label>Event Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>