force-app/main/default/objects/Event_Registration__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events registration</relationshipLabel>
    <relationshipName>Events_Registration</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>