force-app/main/default/objects/Event_Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Events registration</relationshipLabel>
    <relationshipName>Events_Registration</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>